--- a/test_app/app/views/greeter/hello.html.erb
+++ b/test_app/app/views/greeter/hello.html.erb
@@ -1,4 +1,7 @@
-<% names = ["Mike", "Alex", "Joe"] %>
-<h1>Greetings, <%= names.sample %></h1>
-<p>Time is <%= Time.now %></p>
-<p>Find me in app/views/greeter/hello.html.erb</p>
+<h1>Greetings, <%= @name %></h1>
+<p><%= formatted_time(@time) %></p>
+<p><%= @times_displayed %> view(s)</p>
+
+<!-- paths -->
+<p><%= link_to "Google", "https://www.google.com" %></p>
+<p><%= link_to "Bye", greeter_bye_path %></p>
