changing db tables

--- a/test_app/app/views/cars/show.html.erb
+++ b/test_app/app/views/cars/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Make:</strong>
-  <%= @car.make %>
+  <strong>Company:</strong>
+  <%= @car.company %>
 </p>
 
 <p>
