--- a/notes-app/app/views/layouts/application.html.erb
+++ b/notes-app/app/views/layouts/application.html.erb
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>NotesApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+        <title>NotesApp</title>
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </head>
 
-  <body>
+    <body>
 
-    <% flash.each do |key, value| %>
-      <p id='<%= key %>'><%= value %></p>
-    <% end %>
+        <% if logged_in? %>
+            <div stylle="float: right">
+                Logged in as <%= current_user.name %>
+                <%= link_to "Logout", logout_path, method: :delete %>
+            </div>
+        <% end %>
 
-    <%= yield %>
-  </body>
+        <% flash.each do |key, value| %>
+            <p id='<%= key %>'><%= value %></p>
+        <% end %>
+
+        <%= yield %>
+    </body>
 </html>
